--- a/style.css
+++ b/style.css
@@ -8,8 +8,20 @@ html {
 }
 
 body {
-width: 800px;
+width: 600px;
 margin: 0 auto;
+
+}
+
+h1 {
+  padding-left: 100px;
+  font-size: 2rem;
+  margin: 30px 0px;
+  color: darkslategrey;
+}
+
+h2, h3, h5 {
+  text-shadow: 2px 2px darkslateblue;
 }
 
 h2 {
@@ -24,15 +36,10 @@ h5 {
   font-size: 1.5rem;
 }
 
-header {
-  text-align: center;
-  font-size: 3rem;
-  margin-bottom: 20px;
-}
 
 main {
   max-width: 400px;
-  margin: 0 auto;
+  
 
 }
 
@@ -59,13 +66,15 @@ input, textarea, select {
 }
 
 .card {
-  padding: 10px;
+  
   border: 2px solid  slategray;
   border-radius: 10px;;
   text-align: center;
   /* background-color: rgb(233, 233, 111); */
   color: darkslategray;
   box-shadow: 5px 5px lightgrey;
-  /* background-image: url("https://learn.zoner.com/wp-content/uploads/2018/08/landscape-photography-at-every-hour-part-ii-photographing-landscapes-in-rain-or-shine.jpg"); */
+  
+  object-fit: cover;
+  background-size: 600px;
   
 }
